welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:2: error: ';' expected but 'false' found.
  if ((c>b)||(b>a)) {return true} else {reutrn false} }
                                               ^